<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context="jgarciabt.fizzbuzz.MainActivity">

    <TextView
        android:id="@+id/tizz_buzz_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="FizzBuzz"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/fizz_buzz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tizz_buzz_tittle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="Fizz/Buzz" />

    <EditText
        android:id="@+id/number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tizz_buzz_tittle"
        android:layout_marginTop="12dp"
        android:layout_toStartOf="@id/fizz_buzz_button"
        android:layout_toLeftOf="@id/fizz_buzz_button" />

    <TextView
        android:id="@+id/fizz_buzz_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/number_input"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/rock_paper_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fizz_buzz_output"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="Rock-paper-scissors-lizard-spock"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/rock_paper_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rock_paper_tittle"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="Try" />

    <Spinner
        android:id="@+id/player_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rock_paper_tittle"
        android:layout_toStartOf="@id/rock_paper_button"
        android:layout_toLeftOf="@id/rock_paper_button"
        android:entries="@array/rock_paper_options" />

    <Spinner
        android:id="@+id/player_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_1"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/rock_paper_button"
        android:layout_toLeftOf="@id/rock_paper_button"
        android:entries="@array/rock_paper_options" />

    <TextView
        android:id="@+id/rock_paper_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player_2"
        android:layout_marginTop="20dp" />
</RelativeLayout>
